--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     gap: 5vh;
-    padding: 10vh 10vw;
+    padding: 0 10vw 10vh;
     position: relative;
     width: 100%;
 }
