--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,9 +4,11 @@
     /* background-color: black; */
     position: relative; 
     overflow: hidden;
+    z-index: -1
 }
 .hero.final-stage{
     margin-bottom: 50vh;
+    overflow: unset;
 }
 
 .text-wraper{
@@ -17,7 +19,6 @@
     align-items: center;
     position: relative;
     color: white; 
-    z-index: 9;
 }
 
 .first-text-wraper{
@@ -39,7 +40,7 @@
 
 .second-text-wraper{
     font-size: 5vw;
-    position: absolute;
+    position: fixed;
     left: calc(50% - 30vw);
     width: 60vw;
     display: flex;
@@ -81,6 +82,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    z-index: -1;
 }
 
 .first-plan, .second-plan, .third-plan, .fourth-plan, .fifth-plan, .background{
@@ -92,8 +94,7 @@
 }
 
 .first-plan{
-    width: 100%;
-    transform: translateY(-90%);
+    transform: translateY(-150%);
     bottom: -80vw;
     z-index: 10;
 }
@@ -119,6 +120,7 @@
 }
 
 .background{
+    bottom: 0;
     width: 100%;
     height: auto;
     z-index: 4;
@@ -134,19 +136,23 @@
 
 
 @media screen and (max-width: 700px){
+    .hero.final-stage{
+        margin-bottom: 0;
+    }
+    .landscape{
+        overflow: hidden;
+    }
     .second-plan, .third-plan, .fourth-plan, .fifth-plan, .background{
         transform: translateY(-300%);
         will-change: transform;
     }
-    .text-wraper{
+    /* .text-wraper{
         width: 102%;
         left: -1%;
-    }
+    } */
     .first-plan{
         transform: translateY(-120%);
         bottom: -170vw;
-        width: 104%;
-        left: -2%;
     }
     
     .second-plan{
